--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ nav a:hover {
 }
 
 .hero {
-  background: url('image/kamrunag.png') no-repeat center center/cover;
+  background: url('kamrunag.png') no-repeat center center/cover;
   height: 820px;
   color: white;
   display: flex;
@@ -125,4 +125,5 @@ header .cart {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+
 }
